--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Startup - Aplicativo Inovador</title>
+    <title>PsicoNote</title>
     <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Minha Startup</h1>
+                <h1>PsicoNote</h1>
             </div>
             <nav>
                 <ul>
@@ -27,9 +27,9 @@
     <!-- Banner Principal -->
     <section id="home" class="hero-section">
         <div class="hero-content">
-            <h2>Simplifique sua vida com [Nome do Aplicativo]</h2>
-            <p>Um aplicativo que resolve [problema que o app resolve]. Experimente agora e veja a diferença.</p>
-            <a href="#" class="cta-button">Baixe Agora</a>
+            <h2>PsicoNote, a mais nova ferramenta de trabalho dos Psicólogos</h2>
+            <p>Um aplicativo que auxiliará os psicólogos a lembrar de todos os pontos importantes das sessões realizadas.</p>
+            <a href="#" class="cta-button">Saiba Mais</a>
         </div>
     </section>
 
