Incluindo screenshots e ajustando responsividade

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PsicoNote</title>
+    <title>PsicoNote - Revolucionando o Atendimento Psicológico</title>
     <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome para ícones -->
 </head>
 <body>
     <!-- Cabeçalho e Menu de Navegação -->
@@ -27,37 +28,65 @@
     <!-- Banner Principal -->
     <section id="home" class="hero-section">
         <div class="hero-content">
-            <h2>PsicoNote, a mais nova ferramenta de trabalho dos Psicólogos</h2>
-            <p>Um aplicativo que auxiliará os psicólogos a lembrar de todos os pontos importantes das sessões realizadas.</p>
-            <a href="#" class="cta-button">Saiba Mais</a>
+            <h2>Simplifique o Atendimento Psicológico com o PsicoNote</h2>
+            <p>O aplicativo que ajuda psicólogos a otimizar suas sessões com inteligência artificial. Registre, recupere e acompanhe o progresso de forma prática e eficiente.</p>
+            <a href="#about" class="cta-button">Saiba Mais</a>
+            <div class="screenshot-grid">
+                <img src="imgs/Login.jpg" alt="Screenshot 1">
+                <img src="imgs/MainScreen.jpg" alt="Screenshot 2">
+                <img src="imgs/PatientList.jpg" alt="Screenshot 3">
+                <img src="imgs/PatientMenu.jpg" alt="Screenshot 4">
+                <img src="imgs/EvolutionScreen.jpg" alt="Screenshot 5">
+            </div>
         </div>
+        <!-- Área de Screenshots -->
     </section>
 
     <!-- Seção de Funcionalidades -->
     <section id="features" class="features-section">
         <div class="container">
-            <h2>Principais Funcionalidades</h2>
+            <h2>Funcionalidades Principais</h2>
             <div class="features-grid">
                 <div class="feature-item">
-                    <i class="icon">💡</i>
-                    <h3>Fácil de Usar</h3>
-                    <p>Nosso aplicativo é intuitivo e fácil de usar para todos os tipos de usuários.</p>
+                    <i class="fas fa-brain"></i>
+                    <h3>Registro Inteligente</h3>
+                    <p>Transcreva automaticamente suas sessões com a ajuda da inteligência artificial, destacando os pontos mais importantes.</p>
                 </div>
                 <div class="feature-item">
-                    <i class="icon">🔒</i>
-                    <h3>Segurança</h3>
-                    <p>Garantimos que suas informações estarão sempre seguras com criptografia avançada.</p>
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Segurança Avançada</h3>
+                    <p>Criptografia de ponta para garantir a privacidade dos dados dos seus pacientes, mantendo tudo seguro.</p>
                 </div>
                 <div class="feature-item">
-                    <i class="icon">🌍</i>
-                    <h3>Disponível em Várias Plataformas</h3>
-                    <p>Use o aplicativo em qualquer dispositivo, a qualquer hora, de qualquer lugar.</p>
+                    <i class="fas fa-mobile-alt"></i>
+                    <h3>Acessibilidade em Dispositivos Móveis</h3>
+                    <p>Use o PsicoNote em qualquer dispositivo móvel, garantindo que você tenha acesso às suas sessões em smartphones e tablets.</p>
                 </div>
                 <div class="feature-item">
-                    <i class="icon">⚙️</i>
-                    <h3>Suporte 24/7</h3>
-                    <p>Nossa equipe está disponível 24 horas por dia para te ajudar com qualquer problema.</p>
+                    <i class="fas fa-heartbeat"></i>
+                    <h3>Suporte Dedicado</h3>
+                    <p>Nossa equipe está disponível 24/7 para te ajudar com qualquer problema relacionado ao uso do aplicativo.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção Sobre -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <h2>Sobre o PsicoNote</h2>
+            <p>O PsicoNote foi desenvolvido para revolucionar o modo como psicólogos registram e acompanham o progresso de seus pacientes. Com funcionalidades avançadas de inteligência artificial, o aplicativo permite que os profissionais de psicologia registrem manualmente ou via gravação de áudio suas sessões. Nossa tecnologia de IA transcreve automaticamente as gravações e otimiza o texto com os pontos mais importantes discutidos. O PsicoNote foi projetado para garantir segurança de ponta com criptografia, além de oferecer uma experiência prática e acessível em dispositivos móveis, facilitando o trabalho dos psicólogos e melhorando a qualidade dos atendimentos.</p>
+        </div>
+    </section>
+
+    <!-- Seção de Contato -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2>Contato</h2>
+            <p>Siga-nos nas redes sociais ou entre em contato por e-mail para mais informações sobre o PsicoNote.</p>
+            <div class="contact-info">
+                <p><i class="fas fa-envelope"></i> E-mail: <a href="mailto:psiconote.app@gmail.com">psiconote.app@gmail.com</a></p>
+                <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/psiconote_app" target="_blank">@psiconote_app</a></p>
             </div>
         </div>
     </section>
@@ -65,7 +94,7 @@
     <!-- Rodapé -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Minha Startup. Todos os direitos reservados.</p>
+            <p>&copy; 2024 PsicoNote. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
