--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PsicoNote - Revolucionando o Atendimento Psicológico</title>
     <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Font Awesome para ícones -->
 </head>
+
 <body>
     <!-- Cabeçalho e Menu de Navegação -->
     <header>
@@ -14,14 +17,16 @@
             <div class="logo">
                 <h1>PsicoNote</h1>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Início</a></li>
-                    <li><a href="#features">Funcionalidades</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-            </nav>
+            <div class="buttons">
+                <nav>
+                    <ul>
+                        <li><a href="#home">Início</a></li>
+                        <li><a href="#features">Funcionalidades</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -29,7 +34,8 @@
     <section id="home" class="hero-section">
         <div class="hero-content">
             <h2>Simplifique o Atendimento Psicológico com o PsicoNote</h2>
-            <p>O aplicativo que ajuda psicólogos a otimizar suas sessões com inteligência artificial. Registre, recupere e acompanhe o progresso de forma prática e eficiente.</p>
+            <p>O aplicativo que ajuda psicólogos a otimizar suas sessões com inteligência artificial. Registre, recupere
+                e acompanhe o progresso de forma prática e eficiente.</p>
             <a href="#about" class="cta-button">Saiba Mais</a>
             <div class="screenshot-grid">
                 <img src="imgs/Login.jpg" alt="Screenshot 1">
@@ -45,27 +51,31 @@
     <!-- Seção de Funcionalidades -->
     <section id="features" class="features-section">
         <div class="container">
-            <h2>Funcionalidades Principais</h2>
+            <h2>Principais Funcionalidades</h2>
             <div class="features-grid">
                 <div class="feature-item">
                     <i class="fas fa-brain"></i>
                     <h3>Registro Inteligente</h3>
-                    <p>Transcreva automaticamente suas sessões com a ajuda da inteligência artificial, destacando os pontos mais importantes.</p>
+                    <p>Transcreva automaticamente suas sessões com a ajuda da inteligência artificial, destacando os
+                        pontos mais importantes.</p>
                 </div>
                 <div class="feature-item">
                     <i class="fas fa-shield-alt"></i>
                     <h3>Segurança Avançada</h3>
-                    <p>Criptografia de ponta para garantir a privacidade dos dados dos seus pacientes, mantendo tudo seguro.</p>
+                    <p>Criptografia de ponta para garantir a privacidade dos dados dos seus pacientes, mantendo tudo
+                        seguro.</p>
                 </div>
                 <div class="feature-item">
                     <i class="fas fa-mobile-alt"></i>
                     <h3>Acessibilidade em Dispositivos Móveis</h3>
-                    <p>Use o PsicoNote em qualquer dispositivo móvel, garantindo que você tenha acesso às suas sessões em smartphones e tablets.</p>
+                    <p>Use o PsicoNote em qualquer dispositivo móvel, garantindo que você tenha acesso às suas sessões
+                        em smartphones e tablets.</p>
                 </div>
                 <div class="feature-item">
                     <i class="fas fa-heartbeat"></i>
                     <h3>Suporte Dedicado</h3>
-                    <p>Nossa equipe está disponível 24/7 para te ajudar com qualquer problema relacionado ao uso do aplicativo.</p>
+                    <p>Nossa equipe está disponível 24/7 para te ajudar com qualquer problema relacionado ao uso do
+                        aplicativo.</p>
                 </div>
             </div>
         </div>
@@ -75,7 +85,13 @@
     <section id="about" class="about-section">
         <div class="container">
             <h2>Sobre o PsicoNote</h2>
-            <p>O PsicoNote foi desenvolvido para revolucionar o modo como psicólogos registram e acompanham o progresso de seus pacientes. Com funcionalidades avançadas de inteligência artificial, o aplicativo permite que os profissionais de psicologia registrem manualmente ou via gravação de áudio suas sessões. Nossa tecnologia de IA transcreve automaticamente as gravações e otimiza o texto com os pontos mais importantes discutidos. O PsicoNote foi projetado para garantir segurança de ponta com criptografia, além de oferecer uma experiência prática e acessível em dispositivos móveis, facilitando o trabalho dos psicólogos e melhorando a qualidade dos atendimentos.</p>
+            <p>O PsicoNote foi desenvolvido para revolucionar o modo como psicólogos registram e acompanham o progresso
+                de seus pacientes. Com funcionalidades avançadas de inteligência artificial, o aplicativo permite que os
+                profissionais de psicologia registrem manualmente ou via gravação de áudio suas sessões. Nossa
+                tecnologia de IA transcreve automaticamente as gravações e otimiza o texto com os pontos mais
+                importantes discutidos. O PsicoNote foi projetado para garantir segurança de ponta com criptografia,
+                além de oferecer uma experiência prática e acessível em dispositivos móveis, facilitando o trabalho dos
+                psicólogos e melhorando a qualidade dos atendimentos.</p>
         </div>
     </section>
 
@@ -85,8 +101,10 @@
             <h2>Contato</h2>
             <p>Siga-nos nas redes sociais ou entre em contato por e-mail para mais informações sobre o PsicoNote.</p>
             <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> E-mail: <a href="mailto:psiconote.app@gmail.com">psiconote.app@gmail.com</a></p>
-                <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/psiconote_app" target="_blank">@psiconote_app</a></p>
+                <p><i class="fas fa-envelope"></i> E-mail: <a
+                        href="mailto:psiconote.app@gmail.com">psiconote.app@gmail.com</a></p>
+                <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/psiconote_app"
+                        target="_blank">@psiconote_app</a></p>
             </div>
         </div>
     </section>
@@ -98,4 +116,5 @@
         </div>
     </footer>
 </body>
+
 </html>
