--- a/index.html
+++ b/index.html
@@ -7,114 +7,182 @@
     <title>PsicoNote - Revolucionando o Atendimento Psicológico</title>
     <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <!-- Font Awesome para ícones -->
 </head>
 
 <body>
-    <!-- Cabeçalho e Menu de Navegação -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <h1>PsicoNote</h1>
-            </div>
-            <div class="buttons">
-                <nav>
-                    <ul>
-                        <li><a href="#home">Início</a></li>
-                        <li><a href="#features">Funcionalidades</a></li>
-                        <li><a href="#about">Sobre</a></li>
-                        <li><a href="#contact">Contato</a></li>
-                    </ul>
-                </nav>
-            </div>
+    <header id="header">
+        <button class="menu-btn" id="hamburger-menu">
+            <img class="hamburger-menu" src="imgs/menuIcon.svg" alt="">
+        </button>
+        <div>
+            <h1>PsicoNote</h1>
         </div>
+        <nav class="nav-bar" id="navbar">
+            <div class="drawer-header">
+                <div>
+                    <span>PsicoNote</span>
+                </div>
+                <button class="close-btn" id="close-icon">
+                    <img src="imgs/closeIcon.svg" alt="">
+                </button>
+            </div>
+            <ul class="nav-items">
+                <li><a href="#begin">Início</a></li>
+                <li><a href="#features">Funcionalidades</a></li>
+                <li><a href="#about">Sobre</a></li>
+            </ul>
+        </nav>
+        <a class="contact-btn" href="#contact">
+            <span>Contato</span>
+
+            <img src="imgs/arrow-right.svg" alt="">
+        </a>
     </header>
-
-    <!-- Banner Principal -->
-    <section id="home" class="hero-section">
-        <div class="hero-content">
-            <h2>Simplifique o Atendimento Psicológico com o PsicoNote</h2>
-            <p>O aplicativo que ajuda psicólogos a otimizar suas sessões com inteligência artificial. Registre, recupere
-                e acompanhe o progresso de forma prática e eficiente.</p>
-            <a href="#about" class="cta-button">Saiba Mais</a>
-            <div class="screenshot-grid">
-                <img src="imgs/Login.jpg" alt="Screenshot 1">
-                <img src="imgs/MainScreen.jpg" alt="Screenshot 2">
-                <img src="imgs/PatientList.jpg" alt="Screenshot 3">
-                <img src="imgs/PatientMenu.jpg" alt="Screenshot 4">
-                <img src="imgs/EvolutionScreen.jpg" alt="Screenshot 5">
+    <!-- Begin section -->
+    <section id="begin">
+        <div class="content">
+            <div>
+                <h1>Simplifique o Atendimento Psicológico com o PsicoNote</h1>
             </div>
-        </div>
-        <!-- Área de Screenshots -->
-    </section>
-
-    <!-- Seção de Funcionalidades -->
-    <section id="features" class="features-section">
-        <div class="container">
-            <h2>Principais Funcionalidades</h2>
-            <div class="features-grid">
-                <div class="feature-item">
-                    <i class="fas fa-brain"></i>
-                    <h3>Registro Inteligente</h3>
-                    <p>Transcreva automaticamente suas sessões com a ajuda da inteligência artificial, destacando os
-                        pontos mais importantes.</p>
+            <div>
+                <span>O aplicativo que ajuda psicólogos a otimizar suas sessões com inteligência artificial.
+                    Registre,
+                    recupere e acompanhe o progresso de forma prática e eficiente.</span>
+            </div>
+            <a class="cta-btn" href="#about">Saiba mais</a>
+            <div class="img-carousel">
+                <div class="img-container">
+                    <img class="img-list" src="imgs/Login.jpg" alt="">
                 </div>
-                <div class="feature-item">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>Segurança Avançada</h3>
-                    <p>Criptografia de ponta para garantir a privacidade dos dados dos seus pacientes, mantendo tudo
-                        seguro.</p>
+                <div class="img-container">
+                    <img class="img-list" src="imgs/MainScreen.jpg" alt="">
                 </div>
-                <div class="feature-item">
-                    <i class="fas fa-mobile-alt"></i>
-                    <h3>Acessibilidade em Dispositivos Móveis</h3>
-                    <p>Use o PsicoNote em qualquer dispositivo móvel, garantindo que você tenha acesso às suas sessões
-                        em smartphones e tablets.</p>
+                <div class="img-container">
+                    <img class="img-list" src="imgs/PatientList.jpg" alt="">
                 </div>
-                <div class="feature-item">
-                    <i class="fas fa-heartbeat"></i>
-                    <h3>Suporte Dedicado</h3>
-                    <p>Nossa equipe está disponível 24/7 para te ajudar com qualquer problema relacionado ao uso do
-                        aplicativo.</p>
+                <div class="img-container">
+                    <img class="img-list" src="imgs/PatientMenu.jpg" alt="">
+                </div>
+                <div class="img-container">
+                    <img class="img-list" src="imgs/EvolutionScreen.jpg" alt="">
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Seção Sobre -->
-    <section id="about" class="about-section">
-        <div class="container">
-            <h2>Sobre o PsicoNote</h2>
-            <p>O PsicoNote foi desenvolvido para revolucionar o modo como psicólogos registram e acompanham o progresso
-                de seus pacientes. Com funcionalidades avançadas de inteligência artificial, o aplicativo permite que os
-                profissionais de psicologia registrem manualmente ou via gravação de áudio suas sessões. Nossa
-                tecnologia de IA transcreve automaticamente as gravações e otimiza o texto com os pontos mais
-                importantes discutidos. O PsicoNote foi projetado para garantir segurança de ponta com criptografia,
-                além de oferecer uma experiência prática e acessível em dispositivos móveis, facilitando o trabalho dos
-                psicólogos e melhorando a qualidade dos atendimentos.</p>
-        </div>
-    </section>
-
-    <!-- Seção de Contato -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h2>Contato</h2>
-            <p>Siga-nos nas redes sociais ou entre em contato por e-mail para mais informações sobre o PsicoNote.</p>
-            <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> E-mail: <a
-                        href="mailto:psiconote.app@gmail.com">psiconote.app@gmail.com</a></p>
-                <p><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/psiconote_app"
-                        target="_blank">@psiconote_app</a></p>
+    <section id="features" class="white main-features">
+        <div class="content">
+            <div>
+                <h2>Principais Funcionalidades</h2>
+            </div>
+            <div class="features-container">
+                <div class="feature-card">
+                    <div>
+                        <i class="fas fa-brain fa-xl"></i>
+                    </div>
+                    <div>
+                        <h3>Registro Inteligente</h3>
+                    </div>
+                    <div>
+                        <span class="std-span">Transcreva automaticamente suas sessões com a ajuda da inteligência
+                            artificial, destacando os
+                            pontos mais importantes.</span>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div>
+                        <i class="fas fa-shield-alt fa-xl"></i>
+                    </div>
+                    <div>
+                        <h3>Segurança Avançada</h3>
+                    </div>
+                    <div>
+                        <span class="std-span">Criptografia de ponta para garantir a privacidade dos dados dos seus
+                            pacientes, mantendo tudo seguro.</span>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div>
+                        <i class="fas fa-mobile-alt fa-xl"></i>
+                    </div>
+                    <div>
+                        <h3>Acessibilidade em Dispositivos Móveis</h3>
+                    </div>
+                    <div>
+                        <span class="std-span">Use o PsicoNote em qualquer dispositivo móvel, garantindo que você tenha
+                            acesso às suas sessões em smartphones e tablets.</span>
+                    </div>
+                </div>
+                <div class="feature-card">
+                    <div>
+                        <i class="fas fa-heartbeat fa-xl"></i>
+                    </div>
+                    <div>
+                        <h3>Suporte Dedicado</h3>
+                    </div>
+                    <div>
+                        <span class="std-span">Nossa equipe está disponível 24/7 para te ajudar com qualquer problema
+                            relacionado ao uso do aplicativo.</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
-    <!-- Rodapé -->
+    <section id="about" class="green about">
+        <div class="content">
+            <div>
+                <h2>Sobre o PsicoNote</h2>
+            </div>
+            <div class="psiconote-goal">
+                <p>O PsicoNote foi desenvolvido para revolucionar o modo como psicólogos registram e acompanham o
+                    progresso de seus pacientes.</p>
+                <p>Com funcionalidades avançadas de inteligência artificial, o aplicativo permite que os profissionais
+                    de psicologia registrem manualmente ou via gravação de áudio suas sessões.</p>
+                <p>Nossa tecnologia de IA transcreve automaticamente as gravações e otimiza o texto com os pontos mais
+                    importantes discutidos.</p>
+                <p>O PsicoNote foi projetado para garantir segurança de ponta com criptografia, além de oferecer uma
+                    experiência prática e acessível em dispositivos móveis, facilitando o trabalho dos psicólogos e
+                    melhorando a qualidade dos atendimentos.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="white contact-section">
+        <div class="content">
+            <div>
+                <h2>Contato</h2>
+            </div>
+            <div>
+                <span>Siga-nos nas redes sociais ou entre em contato por e-mail para mais informações sobre o
+                    PsicoNote.</span>
+            </div>
+            <div class="contact-row">
+                <div>
+                    <i class="fas fa-envelope fa-xl"></i>
+                </div>
+                <div>
+                    <a href="mailto:psiconote.app@gmail.com">psiconote.app@gmail.com</a>
+                </div>
+            </div>
+            <div class="contact-row">
+                <div>
+                    <i class="fab fa-instagram fa-xl"></i>
+                </div>
+                <div>
+                    <a href="https://instagram.com/psiconote_app" target="_blank">@psiconote_app</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
-        <div class="container">
-            <p>&copy; 2024 PsicoNote. Todos os direitos reservados.</p>
-        </div>
+        <span>© 2024 PsicoNote. Todos os direitos reservados.</span>
     </footer>
+    <script src="script.js"></script>
 </body>
+
 
 </html>
