--- a/index.html
+++ b/index.html
@@ -32,9 +32,19 @@
                 </button>
             </div>
             <ul class="nav-items">
-                <li><a href="#begin">Início</a></li>
-                <li><a href="#features">Funcionalidades</a></li>
-                <li><a href="#about">Sobre</a></li>
+                <li><a href="#begin">
+                        <img src="imgs/home.svg" alt="">
+                        Início
+                    </a></li>
+                <li><a href="#features">
+                        <img src="imgs/dashboard.svg" alt="">
+                        Funcionalidades</a></li>
+                <li><a href="#about">
+                        <img src="imgs/info.svg" alt="">
+                        Sobre</a></li>
+                <li class="contact"><a href="#contact">
+                        <img src="imgs/phone.svg" alt="">
+                        Contact</a></li>
             </ul>
         </nav>
         <a class="contact-btn" href="#contact">
