--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             </div>
             <ul class="nav-items">
                 <li><a href="#begin">
-                        <img src="imgs/home.svg" alt="">
+                        <img class="hidden-icons" src="imgs/home.svg" alt="">
                         Início
                     </a></li>
                 <li><a href="#features">
-                        <img src="imgs/dashboard.svg" alt="">
+                        <img class="hidden-icons" src="imgs/dashboard.svg" alt="">
                         Funcionalidades</a></li>
                 <li><a href="#about">
-                        <img src="imgs/info.svg" alt="">
+                        <img class="hidden-icons" src="imgs/info.svg" alt="">
                         Sobre</a></li>
                 <li class="contact"><a href="#contact">
-                        <img src="imgs/phone.svg" alt="">
+                        <img class="hidden-icons" src="imgs/phone.svg" alt="">
                         Contact</a></li>
             </ul>
         </nav>
