fix: contact label

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         Sobre</a></li>
                 <li class="contact"><a href="#contact">
                         <img class="hidden-icons" src="imgs/phone.svg" alt="">
-                        Contact</a></li>
+                        Contato</a></li>
             </ul>
         </nav>
         <a class="contact-btn" href="#contact">
